# OpenRGB_Hue-Disco_Plugin

./: CMakeLists.txt  LICENSE  README.md  plugin_analysis.md  vcpkg.json
.github/workflows/: build.yml  ci-windows.yml  ci.yml  github_workflows_ci_Version2.yml  github_workflows_ci_Version2.yml.txt  msvc.yml  release-windows.yml
examples/: sample_config.json
include/: OpenRGBConfigReader.h
include/OpenRGB/: Device.h  Plugin.h  PluginAPI.h
packaging/: install_instructions.md
src/: CMakeLists.txt  ConfigManager.cpp  ConfigManager.h  DTLSClient.cpp  DTLSClient.h  HueClient.cpp  HueClient.h  HueDevice.cpp  HueDevice.h  HuePluginWidget.cpp  HuePluginWidget.h  HueStreamer.cpp  HueStreamer.h  LatestFrame.h  Logger.cpp  Logger.h  MappingEngine.cpp  MappingEngine.h  OpenRGBConfigReader.cpp  PluginHueEntertainment.cpp  PluginHueEntertainment.h  plugin_mock.cpp
tests/: CMakeLists.txt  test_dtls_mock_server.cpp  test_mapping.cpp  test_stress.cpp
